--- a/memories/templates/memories_app/doggos.html
+++ b/memories/templates/memories_app/doggos.html
@@ -156,7 +156,8 @@
               <h3 class="text-white">Get Momenta for Pets FREE!</h3>
             </div>
             <!-- <div class="box-cta-inner"><a class="button button-lg button-primary" href="#">Learn More</a></div> -->
-            <div><a href="https://momenta-doggos.onelink.me/EaMH/highlights?pid={{adsource}}&af_ad_type={{admedium}}&c={{adcampaign}}&af_ad={{adcontent}}&af_adset={{adset}}"><img src="{% static 'images/app-store-download.png' %}" class="jpinfo3"></a></div>
+            <!-- <div><a href="https://momenta-doggos.onelink.me/EaMH/highlights?pid={{adsource}}&af_ad_type={{admedium}}&c={{adcampaign}}&af_ad={{adcontent}}&af_adset={{adset}}"><img src="{% static 'images/app-store-download.png' %}" class="jpinfo3"></a></div> -->
+            <a href="https://momenta-doggos.onelink.me/EaMH/highlights?pid={{adsource}}&af_ad_type={{admedium}}&c={{adcampaign}}&af_ad={{adcontent}}&af_adset={{adset}}"><img src="{% static 'images/app-store-download.png' %}" class="jpinfo3"></a>
           </div>
         </div>
       </section>
